# primevocab-server

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-migrate.txt  requirements.txt
.github/workflows/: deploy-production.yml
aiforen/: __init__.py  app.py
aiforen/core/: config.py  db.py  deps.py  errors.py  schema_repair.py  security.py
aiforen/domain/: coaching_content.py  coaching_reading_titles.py  coaching_reading_v2.py  coaching_studied_level.py  content_schemas.py  enums.py  quick_vocab_check.py  reading_coach_cache.py  sql_models.py  vocab_calibration_cefr.py  vocab_coaching_reading.py  vocab_coaching_readings_data.py  vocab_daily_streak.py  vocab_learner_rhythm.py  vocab_mastery_score.py  vocab_mission_priority.py  vocab_pack_tracks.py  vocab_task_templates.py  vocab_word_mission.py  vocab_workout.py
aiforen/scripts/: migrate_mongo_to_postgres.py  seed.py
aiforen/services/: admin_service.py  (+8 more)
alembic/: env.py
docs/: AUTO_DEPLOY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  RAILWAY.md  api.md  vocab-coaching-product-review-plan.md
scripts/: apply_0010_idempotent.py  ensure_vocab_import_schema.py  ielts_web_crawler.py  push.py  reset_submission_limit.py  writing_crawler.py
tests/: test_coaching_content.py  test_coaching_reading_v2.py  test_json_utils_vocab_quiz.py  test_quick_vocab_check.py  test_vocab_coaching.py  test_vocab_task_templates.py  test_vocab_word_mission.py  test_vocab_word_mission_eval.py  vocab_workout_test.py
(+124 files in other folders)
