[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiforen"
version = "3.0.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiforen*"]
exclude = ["scripts*", "docs*", "static*", "stores*"]

[tool.ruff]
line-length = 100
target-version = "py311"
